<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Curso">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_android"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/Firebase"
                android:icon="@drawable/ic_cloud"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_person_outline"
                android:title="@string/a" />
        </menu>
    </item>

</menu>
