<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="#E1BEE7"
    tools:context=".SharedPreferencesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_su_email"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forma_pegamento"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgPegmento">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarjeta_de_credito"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnero"/>

    </RadioGroup>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cbNovidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recivir"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guardar"
        android:text="@string/guardar"
        android:textColor="@color/colorwhite"
        android:background="@drawable/button_rounded"
        android:id="@+id/btnGuardar"/>


</LinearLayout>